deploy: 84b42c5ad02fc4f41f82ee522f026e8d59b389f1

--- a/404.html
+++ b/404.html
@@ -33,6 +33,11 @@ GoLang
 About
 </a>
 </li>
+<li class=nav-item>
+<a class=nav-link href=/go-lang/>
+Go Language
+</a>
+</li>
 </ul>
 </div>
 </div>
