--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@ GoLang
 About
 </a>
 </li>
+<li class=nav-item>
+<a class=nav-link href=/go-lang/>
+Go Language
+</a>
+</li>
 </ul>
 </div>
 </div>
