--- a/about/index.html
+++ b/about/index.html
@@ -21,12 +21,6 @@ Home
 </a>
 </li>
 <li class=nav-item>
-<a class=nav-link href=/go-lang/>
-<i data-feather=go-lang></i>
-GoLang
-</a>
-</li>
-<li class=nav-item>
 <a class=nav-link href=/about/>
 <i data-feather=about></i>
 About
@@ -290,6 +284,9 @@ English, Marathi, Hindi</p>
 <aside id=meta>
 <h6>Tags</h6>
 <hr>
+<a class="btn btn-sm btn-outline-dark tag-btn">about</a>
+<a class="btn btn-sm btn-outline-dark tag-btn">about-us</a>
+<a class="btn btn-sm btn-outline-dark tag-btn">about-manojpawar</a>
 </aside>
 </div>
 </div>
