deploy: 2366472cc109771cc3d82e2c473c2cd65c23c6ab

--- a/about/index.html
+++ b/about/index.html
@@ -40,9 +40,12 @@ Go Language
 <h3>About</h3>
 </div>
 </div><div class=row>
-<div class=col-sm-2>
-<aside aria-label=sidebar>
-<ul>
+<div class="col-sm-2 no-padding">
+<aside aria-label=sidebar1>
+<ul class=list-group>
+<li class="list-group-item list-group-item-action"><a class=nav-link href=https://goprogramminghub.com/go-lang/02-helloworld/>Hello World</a></li>
+<li class="list-group-item list-group-item-action"><a class=nav-link href=https://goprogramminghub.com/go-lang/01-introduction/>Introduction to Go Language</a></li>
+<li class="list-group-item list-group-item-action"><a class=nav-link href=https://goprogramminghub.com/about/>About</a></li>
 </ul>
 </aside>
 </div>
@@ -281,7 +284,20 @@ English, Marathi, Hindi</p>
 </div>
 </div>
 <div class=col-sm-2>
-<aside id=meta>
+<aside aria-label=sidebar2>
+<h6>
+Table Of Content
+</h6>
+<hr>
+<p><nav id=TableOfContents>
+<ul>
+<li>
+<ul>
+<li><a href=#hi-there-myself-manoj-pawar-128522>Hi there, Myself Manoj Pawar 😊</a></li>
+</ul>
+</li>
+</ul>
+</nav></p>
 <h6>Tags</h6>
 <hr>
 <a class="btn btn-sm btn-outline-dark tag-btn">about</a>
