deploy: c7ea128fb15f7c234faa249b100b84c49f163482

--- a/go-lang/01-introduction/index.html
+++ b/go-lang/01-introduction/index.html
@@ -92,11 +92,11 @@ Manoj Pawar<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="
 <code>go version</code></li>
 </ol>
 </article>
-<div class="row mb-2">
-<div class=col-sm-6>
+<div class=row>
+<div class="col-12 col-sm-6">
 </div>
-<div class="col-sm-6 text-end">
-<a class="btn btn-primary btn-sm next" href=https://goprogramminghub.com/go-lang/02-helloworld/>
+<div class="col-12 col-sm-6 text-end">
+<a class="btn btn-primary btn-sm next me-2 mb-2" href=https://goprogramminghub.com/go-lang/02-helloworld/>
 Next: Hello World<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentcolor" class="bi bi-chevron-right" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M4.646 1.646a.5.5.0 01.708.0l6 6a.5.5.0 010 .708l-6 6a.5.5.0 01-.708-.708L10.293 8 4.646 2.354a.5.5.0 010-.708z"/></svg>
 </a>
 </div>
