--- a/go-lang/02-helloworld/index.html
+++ b/go-lang/02-helloworld/index.html
@@ -105,11 +105,11 @@ Let&rsquo;s create a new file, copy the below code snippet and save it as <code>
  <span style=color:#a6e22e>&gt;</span> Hello, World
 </code></pre></div>
 </article>
-<div class="row mb-2">
-<div class=col-sm-6>
-<a class="btn btn-primary btn-sm previous" href=https://goprogramminghub.com/go-lang/01-introduction/><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentcolor" class="bi bi-chevron-left" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M11.354 1.646a.5.5.0 010 .708L5.707 8l5.647 5.646a.5.5.0 01-.708.708l-6-6a.5.5.0 010-.708l6-6a.5.5.0 01.708.0z"/></svg> Previous: Introduction to Go Language</a>
+<div class=row>
+<div class="col-12 col-sm-6">
+<a class="btn btn-primary btn-sm previous ms-2 mb-2" href=https://goprogramminghub.com/go-lang/01-introduction/><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentcolor" class="bi bi-chevron-left" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M11.354 1.646a.5.5.0 010 .708L5.707 8l5.647 5.646a.5.5.0 01-.708.708l-6-6a.5.5.0 010-.708l6-6a.5.5.0 01.708.0z"/></svg> Previous: Introduction to Go Language</a>
 </div>
-<div class="col-sm-6 text-end">
+<div class="col-12 col-sm-6 text-end">
 </div>
 </div>
 </div>
