deploy: 7eac5684211a2abd0aa234f2295f78902deb025a

--- a/go-lang/helloworld-02/index.html
+++ b/go-lang/helloworld-02/index.html
@@ -43,8 +43,8 @@ Go Language
 <div class="col-sm-2 no-padding">
 <aside aria-label=sidebar1>
 <ul class=list-group>
-<li class="list-group-item list-group-item-action"><a class=nav-link href=https://goprogramminghub.com/go-lang/02-helloworld/>Hello World</a></li>
-<li class="list-group-item list-group-item-action"><a class=nav-link href=https://goprogramminghub.com/go-lang/01-introduction/>Introduction to Go Language</a></li>
+<li class="list-group-item list-group-item-action"><a class=nav-link href=https://goprogramminghub.com/go-lang/introduction-01/>Introduction to Go Language</a></li>
+<li class="list-group-item list-group-item-action"><a class=nav-link href=https://goprogramminghub.com/go-lang/helloworld-02/>Hello World</a></li>
 <li class="list-group-item list-group-item-action"><a class=nav-link href=https://goprogramminghub.com/about/>About</a></li>
 </ul>
 </aside>
@@ -67,24 +67,24 @@ Go program has the same structure as other programming languages,</p>
 </ul>
 <h2 id=hello-world-program>Hello World Program</h2>
 <p>The <code>main()</code> function is the program execution entry point for the Go program.</p>
-<div class=highlight anchorlinenos=true lineanchors=-><div style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4>
+<div class=highlight anchorlinenos=true lineanchors=-><div style=background-color:#f8f8f8;-moz-tab-size:4;-o-tab-size:4;tab-size:4>
 <table style=border-spacing:0;padding:0;margin:0;border:0;width:auto;overflow:auto;display:block><tr><td style=vertical-align:top;padding:0;margin:0;border:0>
-<pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code><span style="margin-right:.4em;padding:0 .4em;color:#7f7f7f">1
-</span><span style="margin-right:.4em;padding:0 .4em;color:#7f7f7f">2
-</span><span style="margin-right:.4em;padding:0 .4em;color:#7f7f7f">3
-</span><span style="margin-right:.4em;padding:0 .4em;color:#7f7f7f">4
-</span><span style="margin-right:.4em;padding:0 .4em;color:#7f7f7f">5
-</span><span style=display:block;width:100%;background-color:#3c3d38><span style="margin-right:.4em;padding:0 .4em;color:#7f7f7f">6
-</span></span><span style="margin-right:.4em;padding:0 .4em;color:#7f7f7f">7
+<pre tabindex=0 style=background-color:#f8f8f8;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code><span style="margin-right:.4em;padding:0 .4em;color:#7f7f7f" id=1><a style=outline:none;text-decoration:none;color:inherit href=#1>1</a>
+</span><span style="margin-right:.4em;padding:0 .4em;color:#7f7f7f" id=2><a style=outline:none;text-decoration:none;color:inherit href=#2>2</a>
+</span><span style="margin-right:.4em;padding:0 .4em;color:#7f7f7f" id=3><a style=outline:none;text-decoration:none;color:inherit href=#3>3</a>
+</span><span style="margin-right:.4em;padding:0 .4em;color:#7f7f7f" id=4><a style=outline:none;text-decoration:none;color:inherit href=#4>4</a>
+</span><span style="margin-right:.4em;padding:0 .4em;color:#7f7f7f" id=5><a style=outline:none;text-decoration:none;color:inherit href=#5>5</a>
+</span><span style=display:block;width:100%;background-color:#dfdfdf><span style="margin-right:.4em;padding:0 .4em;color:#7f7f7f" id=6><a style=outline:none;text-decoration:none;color:inherit href=#6>6</a>
+</span></span><span style="margin-right:.4em;padding:0 .4em;color:#7f7f7f" id=7><a style=outline:none;text-decoration:none;color:inherit href=#7>7</a>
 </span></code></pre></td>
 <td style=vertical-align:top;padding:0;margin:0;border:0;width:100%>
-<pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#f92672>package</span> <span style=color:#a6e22e>main</span>
+<pre tabindex=0 style=background-color:#f8f8f8;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#204a87;font-weight:700>package</span> <span style=color:#000>main</span>
 
-<span style=color:#f92672>import</span> <span style=color:#e6db74>&#34;fmt&#34;</span>
+<span style=color:#204a87;font-weight:700>import</span> <span style=color:#4e9a06>&#34;fmt&#34;</span>
 
-<span style=color:#66d9ef>func</span> <span style=color:#a6e22e>main</span>(){
-<span style=display:block;width:100%;background-color:#3c3d38>    <span style=color:#a6e22e>fmt</span>.<span style=color:#a6e22e>Println</span>(<span style=color:#e6db74>&#34;Hello, World&#34;</span>)
-</span>} 
+<span style=color:#204a87;font-weight:700>func</span> <span style=color:#000>main</span><span style=color:#000;font-weight:700>(){</span>
+<span style=display:block;width:100%;background-color:#dfdfdf>    <span style=color:#000>fmt</span><span style=color:#000;font-weight:700>.</span><span style=color:#000>Println</span><span style=color:#000;font-weight:700>(</span><span style=color:#4e9a06>&#34;Hello, World&#34;</span><span style=color:#000;font-weight:700>)</span>
+</span><span style=color:#000;font-weight:700>}</span> 
 </code></pre></td></tr></table>
 </div>
 </div><p><br>
@@ -92,8 +92,8 @@ Go program has the same structure as other programming languages,</p>
 Let&rsquo;s create a new file, copy the below code snippet and save it as <code>main.go</code>.</p>
 <ul>
 <li>The very first line of the program declares the main package. A package is a way to group functions. Unlike Java, a package name must define on the first line of the file. All the files in the same directory belong to the same package.</li>
-<li>Followed by you need to import the required packages. Here, we have imported the popular FMT package, which contains functions for formatting text, including printing on the console. This package is one of the standard library packages you got when you installed Go.</li>
-<li>Then you have implemented the MAIN function to print a message to the console. The MAIN function executes by default when you run the main package.</li>
+<li>Followed by you need to import the required packages. Here, we have imported the popular <code>fmt</code> package, which contains functions for formatting text, including printing on the console. This package is one of the standard library packages you got when you installed Go.</li>
+<li>Then you have implemented the <code>main()</code> function to print a message to the console. The <code>main()</code> function executes by default when you run the main package.</li>
 </ul>
 <p><strong>Note:</strong></p>
 <ul>
@@ -101,13 +101,13 @@ Let&rsquo;s create a new file, copy the below code snippet and save it as <code>
 </ul>
 <h2 id=execute-go-program>Execute Go Program</h2>
 <p>To execute the above code, you should run the command <code>go run main.go</code> on the terminal or CMD. It will run the <code>main()</code> function and print the below output on the console.</p>
-<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-cl data-lang=cl> $ <span style=color:#66d9ef>go</span> run main.go
- <span style=color:#a6e22e>&gt;</span> Hello, World
-</code></pre></div>
+<div class=highlight><pre tabindex=0 style=background-color:#f8f8f8;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-console data-lang=console><span style=color:#000;font-style:italic> $ go run main.go
+</span><span style=color:#000;font-style:italic> &gt; Hello, World
+</span></code></pre></div>
 </article>
 <div class=row>
 <div class="col-12 col-sm-6">
-<a class="btn btn-primary btn-sm previous ms-2 mb-2" href=https://goprogramminghub.com/go-lang/01-introduction/><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentcolor" class="bi bi-chevron-left" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M11.354 1.646a.5.5.0 010 .708L5.707 8l5.647 5.646a.5.5.0 01-.708.708l-6-6a.5.5.0 010-.708l6-6a.5.5.0 01.708.0z"/></svg> Previous: Introduction to Go Language</a>
+<a class="btn btn-primary btn-sm previous ms-2 mb-2" href=https://goprogramminghub.com/go-lang/introduction-01/><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentcolor" class="bi bi-chevron-left" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M11.354 1.646a.5.5.0 010 .708L5.707 8l5.647 5.646a.5.5.0 01-.708.708l-6-6a.5.5.0 010-.708l6-6a.5.5.0 01.708.0z"/></svg> Previous: Introduction to Go Language</a>
 </div>
 <div class="col-12 col-sm-6 text-end">
 </div>
