--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html><html lang=en><head>
-<meta name=generator content="Hugo 0.89.0">
+<meta name=generator content="Hugo 0.89.2">
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <link href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css rel=stylesheet integrity=sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC crossorigin=anonymous>
@@ -45,14 +45,14 @@ Go Language
 <button type=button data-bs-target=#carouselExampleIndicators data-bs-slide-to=2 aria-label="Slide 3"></button>
 </div>
 <div class=carousel-inner>
-<div class="carousel-item active"><svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Second slide" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#666"/><text x="50%" y="50%" fill="#444" dy=".3em">Second
-slide</text></svg>
+<div class="carousel-item active">
+<img src=/images/go-banner.png class="d-block w-100" alt=...>
 </div>
-<div class=carousel-item><svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Second slide" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#666"/><text x="50%" y="50%" fill="#444" dy=".3em">Second
-slide</text></svg>
+<div class=carousel-item>
+<img src=/images/go-banner.png class="d-block w-100" alt=...>
 </div>
-<div class=carousel-item><svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Second slide" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#666"/><text x="50%" y="50%" fill="#444" dy=".3em">Second
-slide</text></svg>
+<div class=carousel-item>
+<img src=/images/go-banner.png class="d-block w-100" alt=...>
 </div>
 </div>
 <button class=carousel-control-prev type=button data-bs-target=#carouselExampleIndicators data-bs-slide=prev>
